--- a/app/src/main/res/layout/fragment_musics.xml
+++ b/app/src/main/res/layout/fragment_musics.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -17,6 +17,7 @@
         android:layout_height="match_parent"
         android:background="@color/md_theme_onPrimary"
         tools:context=".ui.fragments.musics.MusicsFragment">
+
         <RelativeLayout
             android:id="@+id/topBar"
             android:layout_width="match_parent"
@@ -34,8 +35,8 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-<!--                    android:src="@drawable/ic_menu" />-->
+                    android:layout_margin="10dp" />
+                <!--                    android:src="@drawable/ic_menu" />-->
             </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
@@ -61,10 +62,11 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-<!--                    android:src="@drawable/ic_search" />-->
+                    android:layout_margin="10dp" />
+                <!--                    android:src="@drawable/ic_search" />-->
             </LinearLayout>
         </RelativeLayout>
+
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
@@ -73,12 +75,20 @@
             android:layout_below="@+id/topBar"
             android:layout_marginBottom="10dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/musicRecyclerView"
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:layout_width="match_parent"
+                android:id="@+id/swipeRefreshLayout"
                 android:layout_height="match_parent">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/musicRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
         </com.google.android.material.card.MaterialCardView>
 
 
@@ -109,11 +119,11 @@
                     android:layout_centerVertical="true"
                     android:layout_toStartOf="@+id/endTime"
                     android:layout_toEndOf="@+id/currentTime"
-                    android:valueFrom="0"
-                    android:valueTo="100"
                     android:progress="0"
                     android:progressDrawable="@drawable/custom_seekbar"
-                    android:thumb="@drawable/custom_thumb" />
+                    android:thumb="@drawable/custom_thumb"
+                    android:valueFrom="0"
+                    android:valueTo="100" />
 
 
                 <com.google.android.material.textview.MaterialTextView
